--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAIN=
+
+STRIPE_KEY=
+STRIPE_SECRET=
+MIX_STRIPE_KEY="${STRIPE_KEY}"
